stream questions